trunk/Software/OM/omapi/include/omapi.h




/**@}*/



/* A single integer value is used to pack the date/time for a simpler, cross-language, API. 
 * (Defined here before its documentation, grouped with the other time functions below)
 */
typedef unsigned long OM_DATETIME;



/**
 * Return the path to the data file for the specified device.
 * @param deviceId Identifier of the device.
 * @param[out] filenameBuffer A buffer to receive the data filename (of size OM_MAX_PATH).
 * @see OmReaderOpen()
 * @since 1.2
 */
OM_EXPORT int OmGetDataFilename(int deviceId, char *filenameBuffer);
#define OM_OK                       0       /**< Return code: Success. */



/**@}*/



/** 
 * @defgroup reader Binary data file reader
 * Functions to read a binary data file.
 * 
 * A handle to a binary data file reader is obtained with OmReaderOpen() and closed with OmReaderClose().
 *
 * The file is read in blocks by repeatedly calling OmReaderNextBlock(), and the unpacked data is
 *   accessed through OmReaderBuffer(), and the precise sample timestamps are interpolated with OmReaderTimestamp().
 *
 * Advanced uses are supported with direct access to the buffer through OmReaderRawHeaderPacket() and OmReaderRawDataPacket().
 *
 * @see Example code convert.c, for an example of how to use the binary file reader functions of the API.
 * @{
 */

/**
 * Handle to a reader object. 
 * Obtained by calling OmReaderOpen(), and disposed of with OmReaderClose().
 * @see OmReaderOpen(), OmReaderClose()
 */
typedef void * OmReaderHandle;


/**
 * Opens a binary data file for reading.
 * Parses the file header and places the stream at the first block of data.
 * @param binaryFilename The file name of the binary file to open.
 * @see OmReaderNextBlock(), OmReaderClose()
 * @return If successful, a handle to the reader object, otherwise \a NULL
 */
OM_EXPORT OmReaderHandle OmReaderOpen(const char *binaryFilename);



/**
 * Read the size, time-range, and internal chunking of the binary file.
 * @param reader The handle to the reader.
 * @param[out] dataBlockSize A pointer to a value to receive the block size of the data (512 bytes), or \a NULL if not required.
 * @param[out] dataOffsetBlocks A pointer to a value to receive the offset of the data in blocks (same as the header size: 2 blocks), or \a NULL if not required.
 * @param[out] dataNumBlocks A pointer to a value to receive the size of the data buffer in blocks, or \a NULL if not required.
 * @param[out] startTime A pointer for the start time of the data, or \a NULL if not required.
 * @param[out] endTime A pointer for the end time of the data, or \a NULL if not required.
 * @return \a OM_OK if successful, an error code otherwise.
 */
OM_EXPORT int OmReaderDataRange(OmReaderHandle reader, int *dataBlockSize, int *dataOffsetBlocks, int *dataNumBlocks, OM_DATETIME *startTime, OM_DATETIME *endTime);



/**
 * Read the device id, session id and metadata of the binary file.
 * @param reader The handle to the reader.
 * @param[out] deviceId A pointer to a value to receive the device id, or \a NULL if not required.
 * @param[out] sessionId A pointer to a value to receive the session id, or \a NULL if not required.
 * @return A pointer to a value to receive the pointer to the metadata, or \a NULL if the reader handle is not valid.
 */
OM_EXPORT const char *OmReaderMetadata(OmReaderHandle reader, int *deviceId, unsigned int *sessionId);



/**
 * Return the current block index of the reader.
 * @param reader The handle to the reader.
 * @return If non-negative, the block position within the file, an error code otherwise.
 */
OM_EXPORT int OmReaderDataBlockPosition(OmReaderHandle reader);



/**
 * Seeks the file reader to the specified data block.
 * @param reader The handle to the reader.
 * @param dataBlockNumber If positive, the data block index from the start of the file (after any header blocks); if negative, the data block index from the end of the file.
 * @return \a OM_OK if successful, an error code otherwise.
 */
OM_EXPORT int OmReaderDataBlockSeek(OmReaderHandle reader, int dataBlockNumber);



/**
 * Reads the next block of data from the binary file.
 * @param reader The handle to the reader.
 * @retval >0 a positive number of samples in the buffer successfully read. 
 * @retval 0 this block is unreadable but additional blocks remain (call OmReaderNextBlock() again).
 * @retval -1, the end-of-file has been reached.
 * @retval Otherwise, an error code.
 * @see OmReaderBuffer(), OmReaderTimestamp()
 */
OM_EXPORT int OmReaderNextBlock(OmReaderHandle reader);



/**
 * Obtains a pointer to the buffer of samples read, and unpacked, by OmReaderNextBlock().
 * The number of samples available is specified by the return value of the previous OmReaderNextBlock() call.
 * Each sample consists of three consecutive signed 16-bit numbers (representing the X-, Y- and Z-axes), with units of 1/256 g. 
 * @note The buffer contents are only guaranteed until the next call to OmReaderNextBlock() or OmReaderClose().
 * @param reader The handle to the reader.
 * @return A pointer to the buffer of samples just read.
 * @see OmReaderTimestamp()
 */
OM_EXPORT short *OmReaderBuffer(OmReaderHandle reader);



/**
 * Determines the timestamp of the specified sample in the buffer read by OmReaderNextBlock().
 *
 * Actual readings from the real-time-clock are stored once per block (with precise offset information).
 * As the true sampling rate is subject to error (it is subject to the accelerometer device's internal sampling)
 *   this function must interpolate over these timestamps to produce the actual real-time value for each sample.
 *
 * @param reader The handle to the reader.
 * @param index The sample index, must be >= 0 and < the number of samples returned from OmReaderNextBlock().
 * @param[out] fractional A pointer to a value to hold the 1/65536th of a second fractional time offset, or \a NULL if not required.
 * @return The packed date/time value of the sample at the start of the buffer, or 0 if none (e.g. an invalid index).
 */
OM_EXPORT OM_DATETIME OmReaderTimestamp(OmReaderHandle reader, int index, unsigned short *fractional);



/**
 * Reader value indexes for OmReaderGetValue() function.
 * @see OmReaderGetValue
 * @since 1.3
 */
typedef enum
{
/** \cond */
    OM_VALUE_DEVICEID = 3, 
    OM_VALUE_SESSIONID = 4, 
    OM_VALUE_SEQUENCEID = 5, 
/** \endcond */
    OM_VALUE_LIGHT = 7,                 /**< Raw light sensor reading. */
/** \cond */
    OM_VALUE_TEMPERATURE = 8,           
    OM_VALUE_EVENTS = 9, 
    OM_VALUE_BATTERY = 10, 
    OM_VALUE_SAMPLERATE = 11,
    OM_VALUE_LIGHT_LOG10LUXTIMES10POWER3 = 107, /**< log10(lux) * 10^3   therefore   lux = pow(10.0, log10LuxTimes10Power3 / 1000.0) */
/** \endcond */
    OM_VALUE_TEMPERATURE_MC = 108,      /**< Temperature sensor reading in millicentigrade */
/** \cond */
    OM_VALUE_BATTERY_MV = 110,
    OM_VALUE_BATTERY_PERCENT = 210,
/** \endcond */
} OM_READER_VALUE_TYPE;



/**
 * Returns a specific value type from the buffer read by OmReaderNextBlock().
 *
 * @param reader The handle to the reader.
 * @param valueType The value to return.
 * @return The raw value requested for the current block.
 * @see OM_READER_VALUE_TYPE
 * @since 1.3
 */
OM_EXPORT int OmReaderGetValue(OmReaderHandle reader, OM_READER_VALUE_TYPE valueType);
typedef struct
{
	unsigned short packetHeader;	    /**< @ 0 +2 ASCII "MD", little-endian (0x444D) */
	unsigned short packetLength;	    /**< @ 2 +2 Packet length (1020 bytes, with header (4) = 1024 bytes total) */
	unsigned char reserved1;            /**< @ 4 +1 (1 byte reserved) */
	unsigned short deviceId;            /**< @ 5 +2 Device identifier */
	unsigned int sessionId;             /**< @ 7 +4 Unique session identifier */
	unsigned short reserved2;           /**< @11 +2 (2 bytes reserved) */
	OM_DATETIME loggingStartTime;       /**< @13 +4 Start time for delayed logging */
	OM_DATETIME loggingEndTime;         /**< @17 +4 Stop time for delayed logging */
	unsigned int loggingCapacity;       /**< @21 +4 Preset maximum number of samples to collect, 0 = unlimited */
    unsigned char reserved3[11];        /**< @25 +11 (11 bytes reserved) */
	unsigned char samplingRate;		    /**< @36 +1 Sampling rate */
	unsigned int lastChangeTime;        /**< @37 +4 Last change metadata time */
	unsigned char firmwareRevision;		/**< @41 +1 Firmware revision number */
	signed short timeZone;				/**< @42 +2 Time Zone offset from UTC (in minutes), 0xffff = -1 = unknown */
    unsigned char reserved4[20];        /**< @44 +20 (20 bytes reserved) */
    unsigned char annotation[OM_METADATA_SIZE]; /**< @64 +448 Scratch buffer / meta-data (448 characters) */
    unsigned char reserved[512];        /**< @512 +512 Reserved for post-collection scratch buffer / meta-data (512 characters) */
} OM_READER_HEADER_PACKET;


/**
 * Accesses the contents of a raw header packet.
 * The packet will have already been loaded by the call to OmReaderOpen(), and will remain valid until OmReaderClose() is called for the same reader handle.
 * This would not typically be used by an API client.
 * @param reader The handle to the reader.
 * @return A pointer to the bytes in the raw header packet.
 */
OM_EXPORT OM_READER_HEADER_PACKET *OmReaderRawHeaderPacket(OmReaderHandle reader);
typedef struct
{
	unsigned short packetHeader;	    /**< @ 0 +2  ASCII "AX", little-endian (0x5841) */
	unsigned short packetLength;	    /**< @ 2 +2  Packet length (508 bytes, with header (4) = 512 bytes total) */
	unsigned short deviceFractional;	/**< @ 4 +2  Top bit set: 15-bit fraction of a second for the time stamp, the timestampOffset was already adjusted to minimize this assuming ideal sample rate; Top bit clear: 15-bit device identifier, 0 = unknown; */
    unsigned int sessionId;			    /**< @ 6 +4  Unique session identifier, 0 = unknown */
    unsigned int sequenceId;		    /**< @10 +4  Sequence counter, each packet has a new number (reset if restarted) */
    OM_DATETIME timestamp;			    /**< @14 +4  Last reported RTC value, 0 = unknown */
	unsigned short light;			    /**< @18 +2  Last recorded light sensor value in raw units, 0 = none */
	unsigned short temperature;		    /**< @20 +2  Last recorded temperature sensor value in raw units, 0 = none */
	unsigned char  events;			    /**< @22 +1  Event flags since last packet, b0 = resume logging, b1 = single-tap event, b2 = double-tap event, b3-b7 = reserved for diagnostic use) */
	unsigned char  battery;			    /**< @23 +1  Last recorded battery level in raw units, 0 = unknown */
	unsigned char  sampleRate;		    /**< @24 +1  Sample rate code, (3200/(1<<(15-(rate & 0x0f)))) Hz */
	unsigned char  numAxesBPS;		    /**< @25 +1  0x32 (top nibble: number of axes = 3; bottom nibble: packing format - 2 = 3x 16-bit signed, 0 = 3x 10-bit signed + 2-bit exponent) */
	signed short   timestampOffset;	    /**< @26 +2  Relative sample index from the start of the buffer where the whole-second timestamp is valid */
    unsigned short sampleCount;		    /**< @28 +2  Number of accelerometer samples (80 or 120) */
	unsigned char rawSampleData[480];   /**< @30 +480 Raw sample data.  Each sample is either 3x 16-bit signed values (x, y, z) or one 32-bit packed value (The bits in bytes [3][2][1][0]: eezzzzzz zzzzyyyy yyyyyyxx xxxxxxxx, e = binary exponent, lsb on right) */
	unsigned short checksum;            /**< @510 +2 Checksum of packet (16-bit word-wise sum of the whole packet should be zero) */
} OM_READER_DATA_PACKET;


/**
 * Accesses the contents of a raw data packet. 
 * This would not typically be used by an API client.
 * The packet is loaded by calls to OmReaderNextBlock(), and remains valid until the next call of OmReaderNextBlock() or OmReaderClose() for the same reader handle.
 * \note If OmReaderNextBlock() returns 0, the reader has detected a checksum failure in the buffers contents, and any data values should be treated with caution.
 * @param reader The handle to the reader.
 * @return A pointer to the bytes in the raw data packet, or \a NULL if none is available.
 */
OM_EXPORT OM_READER_DATA_PACKET *OmReaderRawDataPacket(OmReaderHandle reader);



/**
 * Closes the specified reader handle.
 * Frees any resources allocated to the reader.
 * @param reader The handle to the reader to close.
 * @see OmReaderOpen()
 */
OM_EXPORT void OmReaderClose(OmReaderHandle reader);