Software/OM/omapinet/OmApi.cs


        [DllImport("libomapi.dll")] public static extern IntPtr OmReaderOpen(string binaryFilename);
        public static IntPtr OmReaderOpenDeviceData(int deviceId)
        {
            StringBuilder filename = new StringBuilder(256);
            if (OmGetDataFilename(deviceId, filename) != OM_OK)
            {
                filename = null;
            }
            if (filename == null)
            {
                return IntPtr.Zero;
            }
            return OmReaderOpen(filename.ToString());
        }
        [DllImport("libomapi.dll")] public static extern int OmReaderDataRange(IntPtr reader, out int dataBlockSize, out int dataOffsetBlocks, out int dataNumBlocks, out uint startTime, out uint endTime);
        [DllImport("libomapi.dll")] public static extern string OmReaderMetadata(IntPtr reader, out int deviceId, out uint sessionId);
        [DllImport("libomapi.dll")] public static extern int OmReaderDataBlockPosition(IntPtr reader);
        [DllImport("libomapi.dll")] public static extern int OmReaderDataBlockSeek(IntPtr reader, int dataBlockNumber);
        [DllImport("libomapi.dll")] public static extern int OmReaderNextBlock(IntPtr reader);
        [DllImport("libomapi.dll")] public static extern IntPtr OmReaderBuffer(IntPtr reader);
        [DllImport("libomapi.dll")] public static extern uint OmReaderTimestamp(IntPtr reader, int index, out ushort fractional);
        public enum OM_READER_VALUE_TYPE { OM_VALUE_DEVICEID = 3, OM_VALUE_SESSIONID = 4, OM_VALUE_SEQUENCEID = 5, OM_VALUE_LIGHT = 7, OM_VALUE_TEMPERATURE = 8, OM_VALUE_EVENTS = 9, OM_VALUE_BATTERY = 10, OM_VALUE_SAMPLERATE = 11, OM_VALUE_TEMPERATURE_MC = 108, OM_VALUE_BATTERY_MV = 110 };
        [DllImport("libomapi.dll")] public static extern int OmReaderGetValue(IntPtr reader, OM_READER_VALUE_TYPE valueType);

/*
        [StructLayout(LayoutKind.Explicit, Size=512, LayoutKind.Sequential)]
        public unsafe class OM_READER_HEADER_PACKET
        {
	        [FieldOffset(0)]  public ushort packetHeader;	    // @ 0 +2 ASCII "MD", little-endian (0x444D) 
	        [FieldOffset(2)]  public ushort packetLength;	    // @ 2 +2 Packet length (1020 bytes, with header (4) = 1024 bytes total) 
	        [FieldOffset(4)]  public byte reserved1;            // @ 4 +1 (1 byte reserved) 
	        [FieldOffset(5)]  public ushort deviceId;           // @ 5 +2 Device identifier 
	        [FieldOffset(7)]  public uint sessionId;            // @ 7 +4 Unique session identifier 
	        [FieldOffset(11)] public ushort reserved2;          // @11 +2 (2 bytes reserved) 
	        [FieldOffset(13)] public uint loggingStartTime;     // @13 +4 Start time for delayed logging 
	        [FieldOffset(17)] public uint loggingEndTime;       // @17 +4 Stop time for delayed logging 
	        [FieldOffset(21)] public uint loggingCapacity;      // @21 +4 Preset maximum number of samples to collect, 0 = unlimited 
            [FieldOffset(25)] public fixed byte reserved3[11];  // @25 +11 (11 bytes reserved) 
	        [FieldOffset(36)] public byte samplingRate;		    // @36 +1 Sampling rate 
	        [FieldOffset(37)] public uint lastChangeTime;       // @37 +4 Last change metadata time 
	        [FieldOffset(41)] public byte firmwareRevision;		// @41 +1 Firmware revision number 
	        [FieldOffset(42)] public short timeZone;		    // @42 +2 Time Zone offset from UTC (in minutes), 0xffff = -1 = unknown 
            [FieldOffset(44)] public fixed byte reserved4[20];   // @44 +20 (20 bytes reserved) 
            [FieldOffset(64)] public fixed byte annotation[448]; // @64 +448 Scratch buffer / meta-data (448 characters) 
            [FieldOffset(512)] public fixed byte reserved[512];  // @512 +512 Reserved for post-collection scratch buffer / meta-data (512 characters) 
        };

        [DllImport("libomapi.dll")] public static extern OM_READER_HEADER_PACKET OmReaderRawHeaderPacket(IntPtr reader);

        [StructLayout(LayoutKind.Explicit, Size=512, LayoutKind.Sequential)]
        public class OM_READER_DATA_PACKET
        {
	        [FieldOffset(0)]  public ushort packetHeader;	    // @ 0 +2  ASCII "AX", little-endian (0x5841) 
	        [FieldOffset(2)]  public ushort packetLength;	    // @ 2 +2  Packet length (508 bytes, with header (4) = 512 bytes total) 
	        [FieldOffset(4)]  public ushort deviceId;		    // @ 4 +2  Device identifier, 0 = unknown 
            [FieldOffset(6)]  public uint sessionId;			// @ 6 +4  Unique session identifier, 0 = unknown 
            [FieldOffset(10)] public uint sequenceId;		    // @10 +4  Sequence counter, each packet has a new number (reset if restarted) 
            [FieldOffset(14)] public uint timestamp;			// @14 +4  Last reported RTC value, 0 = unknown 
	        [FieldOffset(18)] public ushort light;			    // @18 +2  Last recorded light sensor value in raw units, 0 = none 
	        [FieldOffset(20)] public ushort temperature;		// @20 +2  Last recorded temperature sensor value in raw units, 0 = none 
	        [FieldOffset(22)] public byte  events;			    // @22 +1  Event flags since last packet, b0 = resume logging, b1 = single-tap event, b2 = double-tap event, b3-b7 = reserved for diagnostic use) 
	        [FieldOffset(23)] public byte  battery;			    // @23 +1  Last recorded battery level in raw units, 0 = unknown 
	        [FieldOffset(24)] public byte  sampleRate;		    // @24 +1  Sample rate code, (3200/(1<<(15-(rate & 0x0f)))) Hz 
	        [FieldOffset(25)] public byte  numAxesBPS;		    // @25 +1  0x32 (top nibble: number of axes = 3; bottom nibble: packing format - 2 = 3x 16-bit signed, 0 = 3x 10-bit signed + 2-bit exponent) 
	        [FieldOffset(26)] public short   timestampOffset;	// @26 +2  Relative sample index from the start of the buffer where the whole-second timestamp is valid
            [FieldOffset(28)] public ushort sampleCount;		// @28 +2  Number of accelerometer samples (80 or 120) 
	        [FieldOffset(30)] public fixed byte rawSampleData[480];   // @30 +480 Raw sample data.  Each sample is either 3x 16-bit signed values (x, y, z) or one 32-bit packed value (The bits in bytes [3][2][1][0]: eezzzzzz zzzzyyyy yyyyyyxx xxxxxxxx, e = binary exponent, lsb on right) 
	        [FieldOffset(510)] public ushort checksum;          // @510 +2 Checksum of packet (16-bit word-wise sum of the whole packet should be zero) 
        };

        [DllImport("libomapi.dll")] public static extern OM_READER_DATA_PACKET OmReaderRawDataPacket(IntPtr reader);
*/
        [DllImport("libomapi.dll")] public static extern void OmReaderClose(IntPtr reader);

    }
}
